--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -122,6 +122,7 @@ label.color-swatch,
   &.color-swatch--504 {background-image: url('/images/swatches/2020/swatch-504.png');}	//black-grey-stripe
   &.color-swatch--512 {background-image: url('/images/swatches/2020/swatch-512.jpg');}
   &.color-swatch--514 {background-image: url('/images/swatches/2020/swatch-514.jpg');}
+  &.color-swatch--ss514 {background-image: url('/images/swatches/2021/swatch-ss-angled-514.jpg');}	//orange-purple-stripe
   &.color-swatch--515 {background-image: url('/images/swatches/2020/swatch-515.png');}
 
 
@@ -133,6 +134,7 @@ label.color-swatch,
   &.color-swatch--ratchet-601 {background-image: url('/images/swatches/2020/swatch-ratchet-601.jpg');}
   &.color-swatch--602 {background-image: url('/images/swatches/2020/swatch-ratchet-602.jpg');}
   &.color-swatch--605 {background-image: url('/images/swatches/2020/swatch-ratchet-605.jpg');}
+  &.color-swatch--ss605 {background-image: url('/images/swatches/2021/swatch-ss-angled-605.jpg');}
   &.color-swatch--mariner-605 {background-image: url('/images/swatches/2020/swatch-mariner-605.jpg');}
   &.color-swatch--606 {background-color: #ec2173;}		//ev-pink
   &.color-swatch--608 {background-color: #ffdf28;}		//ev-yellow or ev-lime-yellow
@@ -213,6 +215,7 @@ label.color-swatch,
   &.color-swatch--896 {background-image: url('/images/swatches/2020/swatch-896.jpg');}	//
   &.color-swatch--898 {background-image: url('/images/swatches/2020/swatch-898.jpg');}	//
 
+  &.color-swatch--ss903 {background-image: url('/images/swatches/2021/swatch-ss-angled-903.jpg');}
   &.color-swatch--ltd-911 {background-image: url('/images/swatches/2020/swatch-ltd-911.jpg');}
   &.color-swatch--920 {background-image: url('/images/swatches/2020/swatch-920.jpg');}
   &.color-swatch--921 {background-image: url('/images/swatches/2020/swatch-921.jpg');}
