--- a/public/css/ProductPage.scss
+++ b/public/css/ProductPage.scss
@@ -9,7 +9,8 @@ $product-minicart-panel-width: 200px;
   display: block;
   text-align: left;
   margin-bottom: 0.5rem;
-  .material-icons {
+  color: $text-color;
+  &--icon {
     color: $chums-red;
   }
 }
@@ -183,15 +184,32 @@ $product-minicart-panel-width: 200px;
       background-color: rgba(0, 0, 0, 0.5);
     }
   }
-
   .cart-qty-input {
-    button {
-      .hidden-xs {
-        @include media-breakpoint-down(xs) {
-          display: none;
-        }
+    flex-wrap: nowrap;
+    flex-direction: row;
+    .cart-qty--buttons {
+      display: flex;
+      flex-direction: column;
+      button {
+        flex: 0 0 auto;
+        height: 50%;
+        line-height: 0.25rem;
+        font-size: 0.5rem;
+        width: 2rem;
       }
     }
+    input.form-control {
+      &::-webkit-inner-spin-button,
+      &::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      min-width: 4rem;
+      width: 100%;
+      text-align: right;
+    }
+
+    justify-content: stretch;
   }
 
   @import "swatches";
