--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -66,6 +66,7 @@ label.color-swatch,
   &.color-swatch--223 {background-color: #85a8cb;}		//
   &.color-swatch--228 {background-color: #2557C5;}		//
   &.color-swatch--250 {background-color: #00a3e0;}		//aqua
+  &.color-swatch--silicone-250 {background-color: #7bc5a4;}		//aqua
   &.color-swatch--dual-250 {background-image: url('/images/swatches/2020/250-swatch-angle.jpg');}
   &.color-swatch--baja-257 {background-color: #276bb8;}		//baja-urban black multi stripe
   &.color-swatch--264 {background-color: #ebc121;}		//mango
