--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -65,6 +65,7 @@ label.color-swatch,
   &.color-swatch--219 {background-color: #cff471;}		//
   &.color-swatch--223 {background-color: #85a8cb;}		//
   &.color-swatch--228 {background-color: #2557C5;}		//
+  &.color-swatch--249 {background-color: #38373d;}
   &.color-swatch--250 {background-color: #00a3e0;}		//aqua
   &.color-swatch--silicone-250 {background-color: #7bc5a4;}		//aqua
   &.color-swatch--dual-250 {background-image: url('/images/swatches/2020/250-swatch-angle.jpg');}
@@ -122,6 +123,7 @@ label.color-swatch,
   &.color-swatch--501 {background-image: url('/images/swatches/2020/swatch-501.png');}	//grey-white-stripe
   &.color-swatch--504 {background-image: url('/images/swatches/2020/swatch-504.png');}	//black-grey-stripe
   &.color-swatch--512 {background-image: url('/images/swatches/2020/swatch-512.jpg');}
+  &.color-swatch--513 {background-color: #35535F;}
   &.color-swatch--514 {background-image: url('/images/swatches/2020/swatch-514.jpg');}
   &.color-swatch--ss514 {background-image: url('/images/swatches/2021/swatch-ss-angled-514.jpg');}	//orange-purple-stripe
   &.color-swatch--515 {background-image: url('/images/swatches/2020/swatch-515.png');}
@@ -215,6 +217,7 @@ label.color-swatch,
   &.color-swatch--895 {background-image: url('/images/swatches/2020/swatch-895.jpg');}	//
   &.color-swatch--896 {background-image: url('/images/swatches/2020/swatch-896.jpg');}	//
   &.color-swatch--898 {background-image: url('/images/swatches/2020/swatch-898.jpg');}	//
+  &.color-swatch--899 {background-color: #B95100;}
 
   &.color-swatch--ss903 {background-image: url('/images/swatches/2021/swatch-ss-angled-903.jpg');}
   &.color-swatch--ltd-911 {background-image: url('/images/swatches/2020/swatch-ltd-911.jpg');}
