Work in process on updated B2B data handling.

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -1136,8 +1136,7 @@ label.color-swatch.color-swatch--951b,
 label.color-swatch.color-swatch--1010,
 .tag--swatch.color-swatch--1010,
 .color-swatch.color-swatch--1010 {
-  background-color: #d5d5ba;
-  border: 3px solid #4a442d;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-1010.png");
 }
 label.color-swatch.color-swatch--1011,
 .tag--swatch.color-swatch--1011,
