--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -250,7 +250,7 @@ label.color-swatch,
   &.color-swatch--951b {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-951B.jpg');}	//earlfish
 
 
-  &.color-swatch--1010 {background-color: #d5d5ba; border: 3px solid #4a442d;}
+  &.color-swatch--1010 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1010.png');}
   &.color-swatch--1011 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1011.jpg');}
   &.color-swatch--1013 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1013.jpg');}
   &.color-swatch--1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
