feat: Updated styling & swatches.

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -519,8 +519,7 @@ label.color-swatch.color-swatch--391,
 label.color-swatch.color-swatch--405,
 .tag--swatch.color-swatch--405,
 .color-swatch.color-swatch--405 {
-  background-color: #4b7e9f;
-  border: 3px solid #59667d;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-405.jpg");
 }
 label.color-swatch.color-swatch--406,
 .tag--swatch.color-swatch--406,
@@ -530,8 +529,7 @@ label.color-swatch.color-swatch--406,
 label.color-swatch.color-swatch--408,
 .tag--swatch.color-swatch--408,
 .color-swatch.color-swatch--408 {
-  background-color: #ede1c1;
-  border: 3px solid #605a3d;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-408.jpg");
 }
 label.color-swatch.color-swatch--450,
 .tag--swatch.color-swatch--450,
@@ -1161,8 +1159,7 @@ label.color-swatch.color-swatch--neoprene-1014,
 label.color-swatch.color-swatch--1019,
 .tag--swatch.color-swatch--1019,
 .color-swatch.color-swatch--1019 {
-  background-color: #e5d76b;
-  border: 3px solid #4db574;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-1019.jpg");
 }
 label.color-swatch.color-swatch--1020,
 .tag--swatch.color-swatch--1020,
@@ -1183,14 +1180,12 @@ label.color-swatch.color-swatch--1021,
 label.color-swatch.color-swatch--1025,
 .tag--swatch.color-swatch--1025,
 .color-swatch.color-swatch--1025 {
-  background-color: #e89796;
-  border: 3px solid #373737;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-1025.jpg");
 }
 label.color-swatch.color-swatch--1030,
 .tag--swatch.color-swatch--1030,
 .color-swatch.color-swatch--1030 {
-  background-color: #8cd0cc;
-  border: 3px solid #497368;
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-1030.jpg");
 }
 label.color-swatch.color-swatch--1031,
 .tag--swatch.color-swatch--1031,
