--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -112,9 +112,9 @@ label.color-swatch,
   &.color-swatch--390 {background-color: #64534f;}		//fudge
   &.color-swatch--391 {background-color: #4d5751;}		//dark forest
 
-  &.color-swatch--405 {background-color: #4b7e9f; border: 3px solid #59667d;}
+  &.color-swatch--405 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-405.jpg');}
   &.color-swatch--406 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-406.jpg');}
-  &.color-swatch--408 {background-color: #ede1c1; border: 3px solid #605a3d;}
+  &.color-swatch--408 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-408.jpg');}
 
   &.color-swatch--450 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-450.jpg');}
   &.color-swatch--reversi-450 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-450.jpg');}
@@ -255,13 +255,13 @@ label.color-swatch,
   &.color-swatch--1013 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1013.jpg');}
   &.color-swatch--1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
   &.color-swatch--neoprene-1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
-  &.color-swatch--1019 {background-color: #e5d76b; border: 3px solid #4db574;}
+  &.color-swatch--1019 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1019.jpg');}
   //&.color-swatch--1020 {background-color: #d5c8c2;}
   &.color-swatch--1020 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1020.jpg');}
   &.color-swatch--fpp-1020 {background-color: #dde0d9; border: 3px solid #62c3de;}
   &.color-swatch--1021 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1021.jpg');}
-  &.color-swatch--1025 {background-color: #e89796; border: 3px solid #373737;}
-  &.color-swatch--1030 {background-color: #8cd0cc; border: 3px solid #497368;}
+  &.color-swatch--1025 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1025.jpg');}
+  &.color-swatch--1030 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1030.jpg');}
   &.color-swatch--1031 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1031.jpg');}
 
   // seersucker
