--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -11,6 +11,7 @@ label.color-swatch,
   &.color-swatch--tech-101 {background-color: #99becc;} //royal
   &.color-swatch--102 {background-color: #c02119;} 		//red
   &.color-swatch--103 {background-color: #92999f;} 		//grey
+  &.color-swatch--ss103 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-103.jpg');}	//black & grey
   &.color-swatch--105 {background-color: #181a44;} 		//navy
   &.color-swatch--silicone-105 {background-color: #536ca7;} //royal
   &.color-swatch--107 {background-color: #eeeeee;} 		//white
@@ -18,8 +19,10 @@ label.color-swatch,
   &.color-swatch--109 {background-color: #754f9f;}		//purple
   &.color-swatch--111 {background-color: #2cb156;}		//green
   &.color-swatch--113 {background-color: #dcc7b3;}		//tan
+  &.color-swatch--ss113 {background-image: url('//b2b.chums.com/images/swatches/2020/113-swatch-angle.jpg');}
   &.color-swatch--116 {background-color: #895a4e;}		//brown
   &.color-swatch--117 {background-color: #e0663b;}		//orange
+  &.color-swatch--ss117 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-117.jpg');}	//black & orange
   &.color-swatch--118 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-leather-118.jpg');}
   &.color-swatch--leather-118 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-leather-118.jpg');}
   &.color-swatch--suede-118 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-suede-118.jpg');}
@@ -27,8 +30,10 @@ label.color-swatch,
   &.color-swatch--119 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-leather-119.jpg');}
   &.color-swatch--121 {background-color: #5d202b;}		//burgundy
   &.color-swatch--122 {background-color: #57553c;}		//olive
+  &.color-swatch--124 {background-color: #2B5666;}
   &.color-swatch--mariner-126 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-126.jpg');}
   &.color-swatch--127 {background-color: #4296c2;}		//
+  &.color-swatch--ss127 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-127.jpg');}	//black & ocean blue
   &.color-swatch--130 {background-color: #b39767;}
   &.color-swatch--131 {background-color: #093d18;}		//hunter
   &.color-swatch--132 {background-color: #BFD333;}		//neon green
@@ -38,6 +43,7 @@ label.color-swatch,
   &.color-swatch--140 {background-color: #9f3b95;}		//berry
   &.color-swatch--141 {background-color: #e36e66;}		//
   &.color-swatch--146 {background-color: #5a5940;}		//
+  &.color-swatch--ss146 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-146.jpg');}	//black & tate olive
   &.color-swatch--149 {background-color: #865688;}		//eggplant
 
   &.color-swatch--151 {background-color: #C9B037;}		//gold
@@ -47,11 +53,18 @@ label.color-swatch,
   &.color-swatch--silicone-155 {background-color: #a6563d;}		//copper
   &.color-swatch--156 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ratchet-156.jpg');}
   &.color-swatch--157 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ratchet-157.jpg');}
+  &.color-swatch--ss158 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-158.jpg');}	//red-white
   &.color-swatch--159 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-159.jpg');}
   &.color-swatch--160 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ratchet-160.jpg');}
   &.color-swatch--168 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-168.jpg');}
+  &.color-swatch--ss169 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-169.jpg');}	//charcoal & neon green
   &.color-swatch--170 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-170.jpg');}
   &.color-swatch--silicone-170 {background-color: #e7e4bc;}		//moon glow
+  &.color-swatch--ss171 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-171.jpg');}	//
+  &.color-swatch--ss172 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-172.jpg');}	// mustard yellow & Horizon Blue
+  &.color-swatch--ss173 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-173.jpg');}	// Neon Pink & Horizon Blue
+  &.color-swatch--ss174 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-174.jpg');}	// Sunrize Orange & Horizon Blue
+
   &.color-swatch--185 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-185.jpg');}
   &.color-swatch--186 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-186.jpg');}
   &.color-swatch--187 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-187.jpg');}
@@ -60,7 +73,8 @@ label.color-swatch,
   &.color-swatch--190 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-190.jpg');}
   &.color-swatch--199 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-199.jpg');}
 
-  &.color-swatch--217 {background-color: #8c2f30;}		//adobo red  
+  &.color-swatch--204 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-204.png');}
+  &.color-swatch--217 {background-color: #8c2f30;}		//adobo red
   &.color-swatch--218 {background-color: #c9e079;}		//green
   &.color-swatch--219 {background-color: #cff471;}		//
   &.color-swatch--223 {background-color: #85a8cb;}		//
@@ -72,11 +86,14 @@ label.color-swatch,
   &.color-swatch--dual-250 {background-image: url('//b2b.chums.com/images/swatches/2020/250-swatch-angle.jpg');}
   &.color-swatch--baja-257 {background-color: #276bb8;}		//baja-urban black multi stripe
   &.color-swatch--264 {background-color: #ebc121;}		//mango
+  &.color-swatch--290 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-290.png');}
 
-
+  &.color-swatch--300 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-300.png');}
   &.color-swatch--306 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-306.jpg');}	//black & grey
   &.color-swatch--307 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-307.jpg');}	//black & grey
   &.color-swatch--308 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-308.jpg');}	//black & grey
+  &.color-swatch--309 {background-image: url('//b2b.chums.com/images/swatches/2020/309-TRI-swatch-angle.jpg');}
+  &.color-swatch--ss309 {background-image: url('//b2b.chums.com/images/swatches/2020/309-TRI-swatch-angle.jpg');}
   &.color-swatch--310 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-310.jpg');}	//
   &.color-swatch--311 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-311.jpg');}	//
   &.color-swatch--312 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-312.jpg');}	//
@@ -87,14 +104,27 @@ label.color-swatch,
   &.color-swatch--320 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-320.jpg');}
   &.color-swatch--rope-329 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-329.jpg');}
   &.color-swatch--329 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-329.jpg');}
+  &.color-swatch--337,
+  &.color-swatch--rt-max4 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-max4.png');}	// RealTree Max-4
+  &.color-swatch--338,
+  &.color-swatch--rt-apb {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-apb.png');}	// RealTree APB
+  &.color-swatch--339,
+  &.color-swatch--rt-apc {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-apc.png');}	// RealTree APC
   &.color-swatch--mariner-340 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-340.jpg');}
   &.color-swatch--342 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ratchet-342.jpg');}
-  &.color-swatch--349 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-349.jpg');}	//realtree xtra
+
+  &.color-swatch--349,
+  &.color-swatch--rt-xtra {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-xtra.png');}	// RealTree Xtra
 
   &.color-swatch--350 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-350.jpg');}
-  &.color-swatch--351 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-351.jpg');}  //realtree edge
+  &.color-swatch--351,
+  &.color-swatch--rt-edge {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-edge.jpg');}	// RealTree Edge
+
   &.color-swatch--352 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-352.jpg');}  //realtree wave
+  &.color-swatch--353 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-353.png');}
+  &.color-swatch--355 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-355.png');}
   &.color-swatch--dual-356 {background-image: url('//b2b.chums.com/images/swatches/2020/356-swatch-angle.jpg');}
+  &.color-swatch--ss356 {background-image: url('//b2b.chums.com/images/swatches/2020/356-TRI-swatch-angle.jpg');}
   &.color-swatch--357 {background-color: #a9a8a8;}		//storm
   &.color-swatch--358 {background-color: #faca3e;}		//canary
   &.color-swatch--359 {background-color: #efa43c;}		//tangerine
@@ -109,6 +139,7 @@ label.color-swatch,
   &.color-swatch--369 {background-color: #dca448;}		//marigold
   &.color-swatch--370 {background-color: #4aa6b0;}		//teal
   &.color-swatch--374 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-374.jpg');}
+  &.color-swatch--ss374 {background-image: url('//b2b.chums.com/images/swatches/2020/374-TRI-swatch-angle.jpg');}
   &.color-swatch--390 {background-color: #64534f;}		//fudge
   &.color-swatch--391 {background-color: #4d5751;}		//dark forest
 
@@ -153,6 +184,8 @@ label.color-swatch,
   &.color-swatch--609 {background-color: #ffaa4d;}
   &.color-swatch--611 {background-color: #8bef14;}		//ev-green
   &.color-swatch--617 {background-color: #f58e13;}		//ev-orange
+  &.color-swatch--660 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-660.png');}
+  &.color-swatch--662 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-662.png');}
 
   &.color-swatch--701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-701.png');}	//rainbow-tie-dye
   &.color-swatch--ltd-701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-701.jpg');}	//rainbow-tie-dye
@@ -175,6 +208,8 @@ label.color-swatch,
   &.color-swatch--776 {background-color: #ff6068;}
   &.color-swatch--781 {background-color: #4e9b5b;}		//fern
   &.color-swatch--786 {background-color: #48975e;}		//meadow green
+  &.color-swatch--787 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-787.png');}
+  &.color-swatch--788 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-788.png');}
   &.color-swatch--791 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-791.jpg');}	//Topo
   &.color-swatch--792 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-792.jpg');}	//Plaid
   &.color-swatch--793 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-793.jpg');}	//Checkerboard
@@ -199,6 +234,7 @@ label.color-swatch,
   &.color-swatch--837 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-837.jpg');}
   &.color-swatch--830 {background-color: #e76b9b;}
   &.color-swatch--842 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-842.jpg');}
+  &.color-swatch--ss-842 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-842.png');}
   &.color-swatch--845 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-845.jpg');}
 
   &.color-swatch--851 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-851.jpg');}
@@ -211,6 +247,9 @@ label.color-swatch,
   &.color-swatch--874 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-874.jpg');}
   &.color-swatch--875 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-875.jpg');}
   &.color-swatch--876 {background-color: #bb9340; border: 3px solid #123a5b;}
+  &.color-swatch--877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
+  &.color-swatch--880 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-880.png');}
+  &.color-swatch--881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
 
   &.color-swatch--mariner-879 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-879.jpg');}
   &.color-swatch--mariner-883 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-883.jpg');}
@@ -234,6 +273,8 @@ label.color-swatch,
 
   &.color-swatch--ss903 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-ss-angled-903.jpg');}
   &.color-swatch--ltd-911 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-911.jpg');}
+  &.color-swatch--915 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-915.png');}
+  &.color-swatch--916 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-916.png');}
   &.color-swatch--920 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-920.jpg');}
   &.color-swatch--921 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-921.jpg');}
   &.color-swatch--922 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-922.jpg');}
@@ -248,10 +289,17 @@ label.color-swatch,
   &.color-swatch--950 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-950.jpg');}	//halpin
   &.color-swatch--951 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-951B.jpg');}
   &.color-swatch--951b {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-951B.jpg');}	//earlfish
+  &.color-swatch--990 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-990.png');}
+  &.color-swatch--991 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-991.png');}
+  &.color-swatch--992 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-992.png');}
+  &.color-swatch--996 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-996.png');}
+  &.color-swatch--997 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-997.png');}
+  &.color-swatch--998 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-998.png');}
 
-
+  &.color-swatch--1008 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1008.png');}
   &.color-swatch--1010 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1010.png');}
   &.color-swatch--1011 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1011.jpg');}
+  &.color-swatch--1012 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1012.jpg');}
   &.color-swatch--1013 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1013.jpg');}
   &.color-swatch--1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
   &.color-swatch--neoprene-1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
@@ -260,10 +308,17 @@ label.color-swatch,
   &.color-swatch--1020 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1020.jpg');}
   &.color-swatch--fpp-1020 {background-color: #dde0d9; border: 3px solid #62c3de;}
   &.color-swatch--1021 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1021.jpg');}
+  &.color-swatch--1022 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1022.jpg');}
   &.color-swatch--1025 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1025.jpg');}
+  &.color-swatch--1026 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1026.jpg');}
+  &.color-swatch--1027 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1027.jpg');}
+  &.color-swatch--1028 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1028.jpg');}
+  &.color-swatch--1029 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1029.jpg');}
   &.color-swatch--1030 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1030.jpg');}
   &.color-swatch--1031 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1031.jpg');}
-
+  &.color-swatch--1033 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1033.jpg');}
+  &.color-swatch--1034 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1034.jpg');}
+  &.color-swatch--1041 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1041.jpg');}
   // seersucker
   &.color-swatch--100-seersucker {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-100.jpg');}
   &.color-swatch--101-seersucker {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-101.jpg');}
@@ -274,33 +329,16 @@ label.color-swatch,
   &.color-swatch--781-seersucker {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-781.jpg');}
 
   // surf shorts and similar products
-  &.color-swatch--ss103 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-103.jpg');}	//black & grey
-  &.color-swatch--ss113 {background-image: url('//b2b.chums.com/images/swatches/2020/113-swatch-angle.jpg');}
-  &.color-swatch--ss117 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-117.jpg');}	//black & orange
-  &.color-swatch--ss127 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-127.jpg');}	//black & ocean blue
-  &.color-swatch--ss146 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-146.jpg');}	//black & tate olive
-  &.color-swatch--ss158 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-158.jpg');}	//red-white
-  &.color-swatch--ss169 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-169.jpg');}	//charcoal & neon green
-  &.color-swatch--ss171 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-171.jpg');}	//
-  &.color-swatch--ss172 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-172.jpg');}	// mustard yellow & Horizon Blue
-  &.color-swatch--ss173 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-173.jpg');}	// Neon Pink & Horizon Blue
-  &.color-swatch--ss174 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-174.jpg');}	// Sunrize Orange & Horizon Blue
-  &.color-swatch--ss309 {background-image: url('//b2b.chums.com/images/swatches/2020/309-TRI-swatch-angle.jpg');}
-  &.color-swatch--ss356 {background-image: url('//b2b.chums.com/images/swatches/2020/356-TRI-swatch-angle.jpg');}
-  &.color-swatch--ss374 {background-image: url('//b2b.chums.com/images/swatches/2020/374-TRI-swatch-angle.jpg');}
 
 
-  //realtree
-  &.color-swatch--337,
-  &.color-swatch--rt-max4 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-max4.png');}	// RealTree Max-4
-  &.color-swatch--338,
-  &.color-swatch--rt-apb {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-apb.png');}	// RealTree APB
-  &.color-swatch--339,
-  &.color-swatch--rt-apc {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-apc.png');}	// RealTree APC
-  &.color-swatch--349,
-  &.color-swatch--rt-xtra {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-xtra.png');}	// RealTree Xtra
-  &.color-swatch--351,
-  &.color-swatch--rt-edge {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rt-edge.jpg');}	// RealTree Edge
+
+
+
+
+
+
+
+
 
   // bags and cases
   &.color-swatch--100-101 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-100-101.png');}	// blue/navy
