fix: updated swatch colors.

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -384,7 +384,7 @@ label.color-swatch.color-swatch--249,
 label.color-swatch.color-swatch--250,
 .tag--swatch.color-swatch--250,
 .color-swatch.color-swatch--250 {
-  background-color: #00a3e0;
+  background-color: #78CCC9;
 }
 label.color-swatch.color-swatch--silicone-250,
 .tag--swatch.color-swatch--silicone-250,
