--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -81,7 +81,7 @@ label.color-swatch,
   &.color-swatch--228 {background-color: #2557C5;}		//
   &.color-swatch--sleeper-249 {background-color: #38373d; border-right: 10px solid #e3c698;}
   &.color-swatch--249 {background-color: #dfb043; border-top: 7px solid #0d0d0f; border-bottom: 7px solid #0d0d0f;}
-  &.color-swatch--250 {background-color: #00a3e0;}		//aqua
+  &.color-swatch--250 {background-color: #78CCC9;}		//mint
   &.color-swatch--silicone-250 {background-color: #7bc5a4;}		//aqua
   &.color-swatch--dual-250 {background-image: url('//b2b.chums.com/images/swatches/2020/250-swatch-angle.jpg');}
   &.color-swatch--baja-257 {background-color: #276bb8;}		//baja-urban black multi stripe
