--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -185,7 +185,9 @@ label.color-swatch,
   &.color-swatch--611 {background-color: #8bef14;}		//ev-green
   &.color-swatch--617 {background-color: #f58e13;}		//ev-orange
   &.color-swatch--660 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-660.png');}
+  &.color-swatch--ss660 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-660.png');}
   &.color-swatch--662 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-662.png');}
+  &.color-swatch--ss662 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-662.png');}
 
   &.color-swatch--701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-701.png');}	//rainbow-tie-dye
   &.color-swatch--ltd-701 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-ltd-701.jpg');}	//rainbow-tie-dye
@@ -250,6 +252,7 @@ label.color-swatch,
   &.color-swatch--877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
   &.color-swatch--880 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-880.png');}
   &.color-swatch--881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
+  &.color-swatch--ss881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
 
   &.color-swatch--mariner-879 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-879.jpg');}
   &.color-swatch--mariner-883 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-883.jpg');}
