fix: updated swatch colors for surfshorts

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -1139,6 +1139,11 @@ label.color-swatch.color-swatch--877,
 .color-swatch.color-swatch--877 {
   background-image: url("//b2b.chums.com/images/swatches/2022/swatch-877.png");
 }
+label.color-swatch.color-swatch--ss877,
+.tag--swatch.color-swatch--ss877,
+.color-swatch.color-swatch--ss877 {
+  background-image: url("//b2b.chums.com/images/swatches/2022/swatch-877.png");
+}
 label.color-swatch.color-swatch--880,
 .tag--swatch.color-swatch--880,
 .color-swatch.color-swatch--880 {
