--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -250,6 +250,7 @@ label.color-swatch,
   &.color-swatch--875 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-875.jpg');}
   &.color-swatch--876 {background-color: #bb9340; border: 3px solid #123a5b;}
   &.color-swatch--877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
+  &.color-swatch--ss877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
   &.color-swatch--880 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-880.png');}
   &.color-swatch--881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
   &.color-swatch--ss881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
